# reference: https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[project]
name = "hotkdump"
version = "2024.5.2"
description = "Linux kernel crashdump analysis tool"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["crash", "debugging", "kdump"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Pick your license as you wish
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
testing = [
  "pytest>=7",
  "pytest-sugar",
  # The below are ubuntu-dev-tools's dependencies but unfortunately
  # the requirements.txt file is not referred in setup.py so we have
  # to list them here
  ###  SOF `ubuntu-dev-tools` requirements.txt ###
  "python-debian",
  "python-debianbts",
  "distro-info",
  "httplib2",
  "launchpadlib",
  "requests",
  "setuptools",
  ###  EOF `ubuntu-dev-tools` requirements.txt ###
  "ubuntu-dev-tools@git+https://git.launchpad.net/ubuntu/+source/ubuntu-dev-tools@applied/ubuntu/focal-updates",
]

[project.urls] # Optional
"Homepage" = "https://github.com/canonical/hotkdump"
"Bug Reports" = "https://github.com/canonical/hotkdump/issues"

[project.scripts] # Optional
hotkdump = "hotkdump.core.hotkdump_impl:main"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["hotkdump", "hotkdump.core"]
